# elligator2

./: Cargo.toml  README.md
src/: lib.rs  map_to_curve.rs
